<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FORMULARIO"
            android:textColor="#028578"
            android:textSize="60sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/escribe_tu_nombre"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/escribe_tu_edad"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/escribe_tu_direccion"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escolaridad"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Escuela"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="Escolaridad"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/situacion_sentimental"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Senti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/soltero_casado_etc"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbie"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Hobbie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/andar_en_bici_etc"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="219dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#E61B1B"
                android:onClick="limpiar"
                android:text="@string/limpiar"
                android:textColor="#BBDEFB"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#08FD12"
                android:onClick="alta"
                android:text="@string/alta"
                android:textColor="#4527A0"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>